Implementation of AntoxaAntoxic review (round 2)